--- a/TODO
+++ b/TODO
@@ -1,19 +1,6 @@
-Todo lugar onde estiver o const sql deve ser substituido adicionando as configs de conexão na pasta database e importando o arquivo
-Mover o arquivo de conexão para a pasta database
-Mover as chamadas da api da riot para a pasta services ao inves de chamar da controller
-criar as chamadas da api do open api na pasta services ao inves de chamar da controller
-criar os testes unitarios
-
-
-Start using Prisma Client in Node.js (See: https://pris.ly/d/client)
-```
-import { PrismaClient } from '@prisma/client'
-const prisma = new PrismaClient()
-```
-or start using Prisma Client at the edge (See: https://pris.ly/d/accelerate)
-```
-import { PrismaClient } from '@prisma/client/edge'
-const prisma = new PrismaClient()
-```
-
-See other ways of importing Prisma Client: http://pris.ly/d/importing-client
+Todo lugar onde estiver o const sql deve ser substituido adicionando as configs de conexão na pasta database e importando o arquivo  --- Done
+Mover o arquivo de conexão para a pasta database --- Done
+Mover as chamadas da api da riot para a pasta services ao inves de chamar da controller --- On hold
+criar as chamadas da api do openai api na pasta services ao inves de chamar da controller  --- On hold
+criar todos os endpoints da api, os mesmos estão no arquivo index_bkp.txt --- On going
+criar os testes unitarios  --- On hold
